<resources>
    <string name="app_name">Submission 3 Aplikasi Github User</string>
    <string name="main_title">GitHub User</string>
    <string name="detail_title">Detail</string>
    <string name="product">Dibuat oleh</string>
    <string name="by">Bagus Adi Nugroho</string>
    <string name="img_splash">Splash Screen</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="search_hint">Silahkan masukan kata kunci</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="content_tab_following">Following</string>
    <string name="content_tab_follower">Follower</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="add">Ditambahkan ke Favorit</string>
    <string name="delete">Dihapus dari Favorit</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tampilan">Tampilan</string>
</resources>